--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- profile row -->
     <div class="profile-row">
       <div class="profile-photo">
-        <img src="/pictures/Jose_Rizal_full.jpg" alt="Profile photo" class="family">
+        <img src="/pictures/Jose_Rizal_full.jpg" alt="Profile photo" ">
         <button class="upload-photo">Change</button>
       </div>
 
@@ -326,3 +326,4 @@
   </script>
 </body>
 </html>
+
