--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <!-- Composer -->
       <div class="composer card">
         <img class="composer-avatar" src="pictures/Jose_Rizal_full.jpg" alt="you">
-        <input class="composer-input" type="text" placeholder="What's on your mind, Jeross?">
+        <input class="composer-input" type="text" placeholder="What's on your mind, Jose?">
         <div class="composer-actions">
           <button>Live video</button>
           <button>Photo/video</button>
@@ -326,5 +326,6 @@
   </script>
 </body>
 </html>
+
 
 
