--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <aside class="left-col">
       <section class="card intro">
         <h3>Intro</h3>
-        <p class="bio">Aspiring writer • Curious learner • Calamba Kid</p>
+        <p class="bio">"Habang ang isang bayan ay may sariling wika, napananatili rin nito ang kanyang paglaya. Ang wika ay isang pag-iisip ng bayan." - Rizal 1891</p><br>
         <ul class="intro-list">
           <li>Birthplace: Calamba, Laguna</li>
           <li>School: Biñan & Calamba tutors</li>
