coover abd undeerrline

--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@
           <li>Artist and sculptor</li>
           <li>Physician</li>
         </ul>
-        <a class="edit-link" href="#">Edit details</a>
       </section>
 
       <section class="card photos">
         <div class="card-head">
           <h3>Photos</h3>
-          <a href="#">See all photos</a>
+          <a href="#" style="text-decoration: none; color: #1877f2;">See all photos</a>
         </div>
         <div class="photo-grid">
           <!-- replace with your own images -->
@@ -112,7 +111,7 @@
       <section class="card friends-preview">
         <div class="card-head">
           <h3>Friends</h3>
-          <a href="#">See all friends</a>
+          <a href="#" style="text-decoration: none; color: #1877f2;">See all friends</a>
         </div>
         <div class="friends-grid">
           <!-- sample friend avatars -->
@@ -146,7 +145,7 @@
       <!-- Composer -->
       <div class="composer card">
         <img class="composer-avatar" src="pictures/Jose_Rizal_full.jpg" alt="you">
-        <input class="composer-input" type="text" placeholder="What's on your mind, Jeross?">
+        <input class="composer-input" type="text" placeholder="What's on your mind, José?">
         <div class="composer-actions">
           <img height="24" width="24" class="xz74otr x15mokao x1ga7v0g x16uus16 xbiv7yw" alt="" referrerpolicy="origin-when-cross-origin" src="https://static.xx.fbcdn.net/rsrc.php/v4/yr/r/c0dWho49-X3.png?_nc_eui2=AeGQQim_YT6WYpTpQMhjUzeGueRic5Ym8Wm55GJzlibxacAvxBnHVBcesil9ALwLD-ygNg-UJVRDVWzcpWG9pgQz">
           <button>Live video</button>
